# RInside_runner

./: CMakeLists.txt  main.R  main.cpp
